fix: meet the team with arrow was misaligned

--- a/src/pages/AboutUs/Aboutus.scss
+++ b/src/pages/AboutUs/Aboutus.scss
@@ -1,10 +1,23 @@
 @use '../../common';
 
 .about-us {
-  margin-top: 100px;
+  margin-top: 40px;
   width: 100%;
 
+  @include common.phone-landscape-specific {
+    margin-top: 100px;
+  }
+
+  @include common.phone-landscape-specific {
+    margin-top: 40px;
+  }
+
+  @include common.desktop-specific {
+    margin-top: unset;
+  }
+
   &-top {
+    justify-content: space-between;
     width: 90%;
     min-height: 100vh;
 
